2003-06-25  Adam Fedor  <fedor@gnu.org>

	* Tools/gpbs.1.gz: New file (from Martin Brecher).
	* Tools/GNUmakefile.postamble (after-install): Install it.

2003-06-26 00:33  Alexander Malmberg <alexander@malmberg.org>

	* Source/ftfont.m (-_generateGlyphsForRun:at:): Add (experimental)
	handling of utf16 to glyph generation so planes beyond the BMP can
	be used.

2003-06-20  Adam Fedor  <fedor@gnu.org>

	* Version 0.8.7

2003-06-17 20:07  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/composite.m, Source/art/ftfont.m, Source/art/path.m:
	Minor cleanups.

2003-06-17  Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/GSStreamContext.m (GSShowGlyphs::, output:length:)
	Removed compiler warnings about signed/unsigned comparision. 
	Declared the extension method [GSFontInfo nameOfGlyph:].
	In [NSDrawBitmap:::::::::::] initiliale variable alpha to stop the
	compiler from complaining.
	* Source/x11/xdnd.c (xdnd_is_dnd_aware(), xdnd_get_type_list)
	Removed compiler warnings about signed/unsigned comparision. 
	* Header/x11/XGGeneric.h 
	Made ivar focusRequestNumber unsigned.
	* Source/x11/XGServerEvent.m (receivedEvent:type:extra:forMode:)
	Removed compiler warnings about signed/unsigned comparision.
	[receivedEvent:type:extra:forMode:] initialiase deltaY in all
	cases.
	* Source/x11/XGServerWindow.m (PropGetCheckProperty(),
	_setupRootWindow, windowdevice:, setwindowlevel::, imagecursor::::::)
	Removed compiler warnings about signed/unsigned comparision.
	Adopted to changes in GSDisplayServer.h.
	* Source/x11/XGDragView.m (_handleEventDuringDragging:,
	_updateAndMoveImageToCorrectPosition, _xWindowAcceptingDnDunderX:Y:,
	_xWindowAcceptingDnDDescendentOf:underX:Y:)  
	Removed compiler warnings about signed/unsigned comparision.
	* Source/xlib/XGGState.m (_doComplexPath:::)
	Removed compiler warnings about signed/unsigned comparision.
	* Source/xlib/GSXftFontInfo.m (setupAttributes)
	Removed compiler warnings about unused variable.
	* Source/win32/WIN32Server.m