@@ -1,3 +1,7 @@
+2003-06-27 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Tools/gpbs.m: Removed unused methods no longer in protocol.
+
 2003-06-25  Adam Fedor  <fedor@gnu.org>
 
 	* Tools/gpbs.1.gz: New file (from Martin Brecher).
